// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form
      class=""
    >
      <div
        class="PicassoFormField-root"
        data-field-has-error="false"
      >
        <label
          class="block mb-[0.5em] leading-[1em] text-graphite"
        >
          <span
            class="text-[0.8125rem]align-top"
          >
            Label
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form
      class=""
    >
      <div
        class="PicassoFormField-root"
        data-field-has-error="false"
      >
        <label
          class="block text-graphite mb-[0.5em] leading-[1em]"
        >
          <span
            class="text-[0.8125rem]align-top"
          >
            Label
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel required with (optional) 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form
      class=""
    >
      <div
        class="PicassoFormField-root"
        data-field-has-error="false"
      >
        <label
          class="block text-graphite mb-[0.5em] leading-[1em]"
        >
          <span
            class="text-[0.8125rem]align-top"
          >
            Label
             (optional)
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel required with (optional) and with \`labelEndAdornment\` 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form
      class=""
    >
      <div
        class="PicassoFormField-root"
        data-field-has-error="false"
      >
        <label
          class="block text-graphite mb-[0.5em] leading-[1em]"
        >
          <span
            class="text-[0.8125rem]align-top"
          >
            Label
             (optional)
            <span>
              label end adornment
            </span>
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel required with asterisk 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form
      class=""
    >
      <div
        class="PicassoFormField-root"
        data-field-has-error="false"
      >
        <label
          class="block text-graphite mb-[0.5em] leading-[1em]"
        >
          <span
            class="text-[0.8125rem]align-top"
          >
            <span
              class="text-[0.8125rem] align-top"
            >
              *
            </span>
            Label
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;
